tests/baselines/reference/assignmentCompatability_checking-apply-member-off-of-function-interface.errors.txt
==== tests/cases/compiler/assignmentCompatability_checking-apply-member-off-of-function-interface.ts (12 errors) ====
    // 3.8.4 Assignment Compatibility 
    
    interface Applicable {
        apply(blah: any); // also works for 'apply'
    }
    
    var x: Applicable;
    
    // Should fail
    x = '';
    ~
!!! assignmentCompatability_checking-apply-member-off-of-function-interface.ts(10,1): error TS2012: Cannot convert 'string' to 'Applicable':
!!! 	Type 'String' is missing property 'apply' from type 'Applicable'.
    x = [''];
    ~
!!! assignmentCompatability_checking-apply-member-off-of-function-interface.ts(11,1): error TS2012: Cannot convert 'string[]' to 'Applicable':
!!! 	Type 'string[]' is missing property 'apply' from type 'Applicable'.
    x = 4;
    ~
!!! assignmentCompatability_checking-apply-member-off-of-function-interface.ts(12,1): error TS2012: Cannot convert 'number' to 'Applicable':
!!! 	Type 'Number' is missing property 'apply' from type 'Applicable'.
    x = {};
    ~
!!! assignmentCompatability_checking-apply-member-off-of-function-interface.ts(13,1): error TS2012: Cannot convert '{}' to 'Applicable':
!!! 	Type '{}' is missing property 'apply' from type 'Applicable'.
    
    // Should work
    function f() { };
    x = f;
    
    function fn(c: Applicable) { }
    
    // Should Fail
    fn('');
    ~~
!!! assignmentCompatability_checking-apply-member-off-of-function-interface.ts(22,1): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Type 'String' is missing property 'apply' from type 'Applicable'.
    ~~
!!! assignmentCompatability_checking-apply-member-off-of-function-interface.ts(22,1): error TS2087: Could not select overload for 'call' expression.
    fn(['']);
    ~~
!!! assignmentCompatability_checking-apply-member-off-of-function-interface.ts(23,1): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Type 'string[]' is missing property 'apply' from type 'Applicable'.
    ~~
!!! assignmentCompatability_checking-apply-member-off-of-function-interface.ts(23,1): error TS2087: Could not select overload for 'call' expression.
    fn(4);
    ~~
!!! assignmentCompatability_checking-apply-member-off-of-function-interface.ts(24,1): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Type 'Number' is missing property 'apply' from type 'Applicable'.
    ~~
!!! assignmentCompatability_checking-apply-member-off-of-function-interface.ts(24,1): error TS2087: Could not select overload for 'call' expression.
    fn({});
    ~~
!!! assignmentCompatability_checking-apply-member-off-of-function-interface.ts(25,1): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Type '{}' is missing property 'apply' from type 'Applicable'.
    ~~
!!! assignmentCompatability_checking-apply-member-off-of-function-interface.ts(25,1): error TS2087: Could not select overload for 'call' expression.
    
    
    // Should work
    fn(a => { });
    